Removes perspective so z-index works, fixes DT-2159

--- a/less/widgets/slideshow.less
+++ b/less/widgets/slideshow.less
@@ -799,7 +799,7 @@ responsiveslideshow__slides-list {
 		// Image Title, Image Description
 
 		.responsiveslideshow__image-title, .responsiveslideshow__image-description {
-			//font-size: bkscale(@font-swatch5-font-size, 0.8);
+			font-size: bkscale(@font-swatch5-font-size, 1);
 			padding: 0.4em 2%;
 			line-height: 1.4;
 		}
